k8s/django-test/django-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: default
  labels:
    app: django
spec:
  selector:
    matchLabels:
      app: django
  replicas: 1
  template:
    metadata:
      labels:
        app: django
    spec:
      volumes:
        - name: django-storage
          persistentVolumeClaim:
            claimName: django-volume
        - name: django-static
          persistentVolumeClaim:
            claimName: django-volume-static
        - name: nginx-conf
          configMap:
            name: django-nginx
      containers:
      - name: nginx-sidecar
        image: nginx:stable
        ports:
            - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d
            readOnly: true
          - name: django-storage
            mountPath: /var/www/media/
            readOnly: true
          - name: django-static
            mountPath:  /var/www/static/
            readOnly: true

      - name: django
        image: ghcr.io/it21846/django:latest
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 300Mi
        ports:
        - containerPort: 8000
          name:  django
        volumeMounts:
          - name: django-storage
            mountPath: /app/media
          - name: django-static
            mountPath: /app/static
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
