k8s/django-test/django-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ssl-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "it21846-django.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: django-service
            port:
              number: 8888
  tls:
  - hosts:
    - it21846-django.ddns.net
    secretName: django-production-certificate
